--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>%VITE_APP_NAME%</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="stylesheet" href="/src/styles/gradient.css">
   <script type="module" src="/src/main.js" defer></script>
 </head>
 
