Add a router link to a page title, change some meta tags.

--- a/src/applications/work/index.html
+++ b/src/applications/work/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>%VITE_APP_NAME%</title>
+  <title>Personal page - Rafał Borowski</title>
+  <meta name="description" content="Hi, I am Rafał Borowski and this is my personal website. I am a passionate fullstack web developer with diverse skills, based in Gdynia, Poland 📌">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <script type="module" src="main.js" defer></script>
 </head>
