--- a/src/applications/work/index.html
+++ b/src/applications/work/index.html
@@ -3,10 +3,19 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Personal page - Rafał Borowski</title>
   <meta name="description" content="Hi, I am Rafał Borowski and this is my personal website. I am a passionate fullstack web developer with diverse skills, based in Gdynia, Poland 📌">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=20240429">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=20240429">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=20240429">
+  <link rel="manifest" href="/site.webmanifest?v=20240429">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg?v=20240429" color="#005b5a">
+  <link rel="shortcut icon" href="/favicon.ico?v=20240429">
+  <meta name="msapplication-TileColor" content="#005b5a">
+  <meta name="theme-color" content="#ffffff">
+
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <script type="module" src="main.js" defer></script>
 </head>
