Change e-mail in footer and page title

--- a/src/applications/work/index.html
+++ b/src/applications/work/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Personal page - Rafał Borowski</title>
+  <title>Rafał Borowski - personal website</title>
   <meta name="description" content="Hi, I am Rafał Borowski and this is my personal website. I am a passionate fullstack web developer with diverse skills, based in Gdynia, Poland 📌">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=20240429">
