Add google site verification tag

--- a/src/applications/work/index.html
+++ b/src/applications/work/index.html
@@ -15,6 +15,7 @@
   <link rel="shortcut icon" href="/favicon.ico?v=20240429">
   <meta name="msapplication-TileColor" content="#005b5a">
   <meta name="theme-color" content="#ffffff">
+  <meta name="google-site-verification" content="g2bRaiM54u59BBZn5Sjzk2jLc-EuyS5VXvM4WqFzTUI" />
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <script type="module" src="main.js" defer></script>
